# rs485-turbidity-sensor

./: LICENSE  README.md  main.py  pyproject.toml  read_sensor.py  read_sensor_resolve_adapter.py  simulate_turbidity_dosing.py
docs/: how-to-collect-data.md
rpi/: net-provision.sh  setup.sh
scripts/: _common.sh  config.sh  sensor-info.sh  sensor-latency  sensor-probe  sensor-raw
scripts/py/: latency.py  probe.py  raw_read.py
src/turbidity_monitor/: __init__.py  config.py
src/turbidity_monitor/connection/: __init__.py  backoff.py  ports.py  usb_event_logger.py
src/turbidity_monitor/health/: __init__.py  csv_reporter.py  metrics.py
src/turbidity_monitor/logging/: __init__.py  data_logger.py
src/turbidity_monitor/visualization/: __init__.py  live_plot.py  static_plotter.py
