[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "turbidity-transmitter"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pymodbus>=3.12.1",
    "pyserial>=3.5",
    "matplotlib>=3.8.0",
    "ruff>=0.15.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/turbidity_monitor"]
